    * 1422 agent_vsphere: now able to configure where the power state of a vm or esx-host should be assigned...
    * 1442 ups_socomec_out_source: New check for checking the power source of out phases for Socomec UPSs
    * 0662 domino_mailqueues: new check to monitor mail queues in Lotus Domino
    * 1188 veeam_client: Check now also outputs ReadSize and TransferedSize...
    * 1190 statgrab_cpu: Check can now handle parameters
    * 0663 domino_info: new check to extract informational data about a Lotus Domino Server
    * 0664 domino_users: new check to monitor the number of users on a Domino Notes server
    * 1447 domino_transactions: new check to monitor the number of transactions per minute on Lotus Domino servers
    * 1051 FIX: tcp_conn_stats: fix missing performance data...
    * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
    * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
    * 0187 FIX: hp_proliant_power: Fixed Wato configuration
    * 0192 FIX: oracle_rman_backups: Not longer try to make a inventory for broken plugin outputs
    * 0194 FIX: raritan_pdu_inlet: Check now outputs the correct values...
            NOTE: Please refer to the migration notes!
    * 1071 FIX: oracle_rman_backups: Only inventorize ARCHIVELOG / DB FULL / DB INCR entries...
    * 1152 FIX: mk-job: The check now captures currently running jobs and their start time...
    * 0198 FIX: cisco_temp_sensor: Removed dicey detection for temperature value....
    * 0645 FIX: brocade_fcport: since in newer firmware (7.*) swFCPortSpeed is deprecated, we then calculate port speed from IF-MIB::ifHighSpeed
    * 1097 FIX: windows_agent: preventing missing agent sections on first query...
    * 1009 FIX: df: deal with space in file system type for PlayStation file system...
    * 1098 FIX: esx_vsphere_counters.diskio: Now reports unknown when counter data is missing