@@ -74,10 +74,10 @@
     * 1442 ups_socomec_out_source: New check for checking the power source of out phases for Socomec UPSs
     * 0662 domino_mailqueues: new check to monitor mail queues in Lotus Domino
     * 1188 veeam_client: Check now also outputs ReadSize and TransferedSize...
-    * 1190 statgrab_cpu: Check can now handle parameters
     * 0663 domino_info: new check to extract informational data about a Lotus Domino Server
     * 0664 domino_users: new check to monitor the number of users on a Domino Notes server
     * 1447 domino_transactions: new check to monitor the number of transactions per minute on Lotus Domino servers
+    * 1190 statgrab_cpu: Check can now handle parameters
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
@@ -139,6 +139,7 @@
     * 1158 FIX: Moved filter logic to visuals module...
             NOTE: Please refer to the migration notes!
     * 1077 FIX: Fixed labelling of Y achsis in prediction graphs...
+    * 1162 FIX: User profiles can not be edited on WATO remote sites anymore...
 
     WATO:
     * 1096 New WATO web service: manage hosts via a new HTTP API...
